manifests/plausible/clickhouse.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plausible-events-db
  namespace: beacon
  labels:
    app: plausible-events-db
spec:
  serviceName: plausible-events-db
  replicas: 1
  selector:
    matchLabels:
      app: plausible-events-db
  template:
    metadata:
      labels:
        app: plausible-events-db
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
            - name: native
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /ping
              port: 8123
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 8123
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /var/lib/clickhouse
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-events-db
  namespace: beacon
  labels:
    app: plausible-events-db
spec:
  selector:
    app: plausible-events-db
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
    - name: native
      port: 9000
      targetPort: 9000
      protocol: TCP
