manifests/plausible/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: beacon
  labels:
    app: plausible
spec:
  selector:
    app: plausible
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
